force-app/main/default/objects/ABSLI_Case_Detail__c/ABSLI_Case_Detail__c.object-meta.xml
<CustomObject>
    <description>This is extension object specific for ABSLI Business Unit.</description>
    <label>ABSLI Case Detail</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABSLI Case Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>