force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Savings Account</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>NRO Account</fullName>
            </value>
            <value>
                <fullName>NRE Account</fullName>
            </value>
            <value>
                <fullName>Cash Credit</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>Overdraft</fullName>
            </value>
            <value>
                <fullName>Personal Chequing Account</fullName>
            </value>
            <value>
                <fullName>Chequing Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>