force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Ack_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Ack_Officer_Name__c</fullName>
    <description>This field is used in IGMS to Salesforce Complaint Creation Inbound API.</description>
    <label>Ack Officer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>