force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Acknowledgement_Call_Done_on_Number__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Call_Done_on_Number__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Acknowledgement Call Done on (Number)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>