force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>