force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <label>Address Line 3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>