force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Address_of_the_Diagnostic_Center__c.field-meta.xml
<CustomField>
    <fullName>Address_of_the_Diagnostic_Center__c</fullName>
    <label>Address of the Diagnostic Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>