force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Advisor_Code__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Code__c</fullName>
    <label>Advisor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>