force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Advisor_revert_received__c.field-meta.xml
<CustomField>
    <fullName>Advisor_revert_received__c</fullName>
    <description>IGMS Field</description>
    <label>Advisor revert received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>