force-app/main/default/objects/ABSLI_Case_Detail__c/fields/API_Request__c.field-meta.xml
<CustomField>
    <fullName>API_Request__c</fullName>
    <description>Field created to stamp API request for PIVC modernisation.</description>
    <label>API Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>