force-app/main/default/objects/ABSLI_Case_Detail__c/fields/API_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>API_Response_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API Response Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>