force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Approved_Waiver_in_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Waiver_in_Amount__c</fullName>
    <label>Approved Waiver in Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>