force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <label>Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>