force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Approver_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Approver_Remarks__c</fullName>
    <label>Approver Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>