force-app/main/default/objects/ABSLI_Case_Detail__c/fields/AutoCreateCaseExtension_Technical_Field__c.field-meta.xml
<CustomField>
    <fullName>AutoCreateCaseExtension_Technical_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Technical Field - Used in CTSTs which doesn&apos;t have any CFC configs of Case Detail</description>
    <label>AutoCreateCaseExtension (Technical Field)</label>
    <type>Checkbox</type>
</CustomField>