force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Balance_Amount_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_to_be_paid__c</fullName>
    <label>Balance Amount to be paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>