force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Bank_IMPS_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_IMPS_Date__c</fullName>
    <label>Bank IMPS Date</label>
    <type>Date</type>
</CustomField>