force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Bank_IMPS_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_IMPS_Status_Code__c</fullName>
    <label>Bank IMPS Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>