force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Bank_IMPS_Verified__c.field-meta.xml
<CustomField>
    <fullName>Bank_IMPS_Verified__c</fullName>
    <label>Bank IMPS Verification Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>