force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Before_3_PM__c.field-meta.xml
<CustomField>
    <fullName>Before_3_PM__c</fullName>
    <label>Before 3 PM?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>