force-app/main/default/objects/ABSLI_Case_Detail__c/fields/BOC_or_Collection_No__c.field-meta.xml
<CustomField>
    <fullName>BOC_or_Collection_No__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>BOC or Collection No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>