force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Amount__c</fullName>
    <label>Bonus Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>