force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Branch_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Branch_Receive_Date__c</fullName>
    <label>Branch Receive Date</label>
    <type>Date</type>
</CustomField>