force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Case_Pending_With__c.field-meta.xml
<CustomField>
    <fullName>Case_Pending_With__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Case Pending With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polad</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Revenue Assurance</fullName>
            </value>
            <value>
                <fullName>Sales Compliance</fullName>
            </value>
            <value>
                <fullName>Misselling Complince</fullName>
            </value>
            <value>
                <fullName>Fraud Complinece</fullName>
            </value>
            <value>
                <fullName>GRC</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Product\actuarial</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Taxation</fullName>
            </value>
            <value>
                <fullName>CS projects</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Risk Complience</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>SA Agent</fullName>
            </value>
            <value>
                <fullName>SA Manager</fullName>
            </value>
            <value>
                <fullName>SA Head</fullName>
            </value>
            <value>
                <fullName>CS Head</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>