force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Case_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Reference_Number__c</fullName>
    <label>Case Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>