force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Cash_Surrender_Value__c.field-meta.xml
<CustomField>
    <fullName>Cash_Surrender_Value__c</fullName>
    <label>Cash Surrender Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>