force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Claim_decision__c.field-meta.xml
<CustomField>
    <fullName>Claim_decision__c</fullName>
    <label>Claim decision</label>
    <type>TextArea</type>
</CustomField>