force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Claim_Intimation_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Intimation_Date__c</fullName>
    <description>This field is used in ABSLI UpdateComplaint Inbound API</description>
    <label>Claim Intimation Date</label>
    <type>Date</type>
</CustomField>