force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Claim_Payment_Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Payment_Cheque_Number__c</fullName>
    <description>This field is used in IGMS to Salesforce Complaint Creation API.</description>
    <label>Claim Payment Cheque Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>