force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Claim_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Payment_Date__c</fullName>
    <description>This field is used in IGMS to Salesforce Complaint Creation Date</description>
    <label>Claim Payment Date</label>
    <type>Date</type>
</CustomField>