force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Claim_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Requested_Amount__c</fullName>
    <description>This field in used in IGMS to Salesforce Complaint Creation Inbound API.</description>
    <label>Claim Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>