force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Claimant_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Email_Address__c</fullName>
    <label>Claimant Email Address</label>
    <type>Email</type>
</CustomField>