force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Claimant_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Mobile_Number__c</fullName>
    <label>Claimant Mobile Number</label>
    <type>Phone</type>
</CustomField>