force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Classification_Description_Exceptional_A__c.field-meta.xml
<CustomField>
    <fullName>Classification_Description_Exceptional_A__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Classification Description/Exceptional A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>