force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Complaints IGMS History Field</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>