force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Closed_Looping_Done_on_Number__c.field-meta.xml
<CustomField>
    <fullName>Closed_Looping_Done_on_Number__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Closed Looping Done on Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>