force-app/main/default/objects/ABSLI_Case_Detail__c/fields/COI_Covid_Quest__c.field-meta.xml
<CustomField>
    <fullName>COI_Covid_Quest__c</fullName>
    <label>COI Covid Quest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>