force-app/main/default/objects/ABSLI_Case_Detail__c/fields/COI_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>COI_Signed_Date__c</fullName>
    <label>COI Signed Date</label>
    <type>Date</type>
</CustomField>