force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Comments_from_web__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_web__c</fullName>
    <description>IGMS Field</description>
    <label>Comments from web</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>