force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Contact_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Email__c</fullName>
    <label>Contact Person Email</label>
    <type>Email</type>
</CustomField>