force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Contact_Person_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Number__c</fullName>
    <label>Contact Person Number</label>
    <type>Phone</type>
</CustomField>