force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>Aland Islands</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>Albania</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>Algeria</label>
            </value>
            <value>
                <fullName>A5</fullName>
                <label>American Samoa</label>
            </value>
            <value>
                <fullName>A6</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>A7</fullName>
                <label>Angola</label>
            </value>
            <value>
                <fullName>A8</fullName>
                <label>Anguilla</label>
            </value>
            <value>
                <fullName>A9</fullName>
                <label>Antarctica</label>
            </value>
            <value>
                <fullName>AB</fullName>
                <label>Aleutian Islands</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <label>Arab Republic of Egypt</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>Argentine Republic</label>
            </value>
            <value>
                <fullName>AE</fullName>
                <label>Azores</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>B1</fullName>
                <label>Antigua And Barbuda</label>
            </value>
            <value>
                <fullName>B2</fullName>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>B3</fullName>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>B4</fullName>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>B5</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>B6</fullName>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>B7</fullName>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>B8</fullName>
                <label>Belize</label>
            </value>
            <value>
                <fullName>B9</fullName>
                <label>Benin</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>Bahrain</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Bolivarian Republic of Venezuela</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <label>Bora Bora</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Britain</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>