force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Customer_Contactibility_CIose_looping__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contactibility_CIose_looping__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Customer  Contactability - CIose looping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Attempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>