force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation and refund of premiums</fullName>
            </value>
            <value>
                <fullName>Short Pay</fullName>
            </value>
            <value>
                <fullName>Single pay</fullName>
            </value>
            <value>
                <fullName>Transfer to old policy</fullName>
            </value>
            <value>
                <fullName>Cancellation denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>