force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Decision_Description__c.field-meta.xml
<CustomField>
    <fullName>Decision_Description__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Decision Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Deny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>