force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Decision_Give_by__c.field-meta.xml
<CustomField>
    <fullName>Decision_Give_by__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Decision Give by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA Agent</fullName>
            </value>
            <value>
                <fullName>SA Team Leader</fullName>
            </value>
            <value>
                <fullName>SA Team Manager</fullName>
            </value>
            <value>
                <fullName>SA Head</fullName>
            </value>
            <value>
                <fullName>CS Head</fullName>
            </value>
            <value>
                <fullName>Compliance Fraud</fullName>
            </value>
            <value>
                <fullName>Compliance Misselling</fullName>
            </value>
            <value>
                <fullName>Compliance Head</fullName>
            </value>
            <value>
                <fullName>Compliance legal</fullName>
            </value>
            <value>
                <fullName>GRC</fullName>
            </value>
            <value>
                <fullName>Polad</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>