force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Document_Url__c.field-meta.xml
<CustomField>
    <fullName>Document_Url__c</fullName>
    <label>DocumentUrl</label>
    <type>Url</type>
</CustomField>