force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Document_Url_Additional__c.field-meta.xml
<CustomField>
    <fullName>Document_Url_Additional__c</fullName>
    <label>Document Url Additional</label>
    <type>Url</type>
</CustomField>