force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Draft_AttachmentIds__c.field-meta.xml
<CustomField>
    <fullName>Draft_AttachmentIds__c</fullName>
    <label>Draft AttachmentIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>