force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Draft_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Draft_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft Email Sent</label>
    <type>Checkbox</type>
</CustomField>