force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Draft_Subject__c.field-meta.xml
<CustomField>
    <fullName>Draft_Subject__c</fullName>
    <label>Draft Subject</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>