force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Draft_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Draft_To_Address__c</fullName>
    <label>Draft To Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>