force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Early_Payout__c.field-meta.xml
<CustomField>
    <fullName>Early_Payout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Payout</label>
    <type>Checkbox</type>
</CustomField>