force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Ebot_Email_in_Draft__c.field-meta.xml
<CustomField>
    <fullName>Ebot_Email_in_Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ebot Email in Draft</label>
    <type>Checkbox</type>
</CustomField>