force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <description>This is used in Email Update STP</description>
    <label>Email Id</label>
    <type>Email</type>
</CustomField>