force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Entity_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Overall_SLA__c</fullName>
    <label>Entity Reference No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>