force-app/main/default/objects/ABSLI_Case_Detail__c/fields/Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Error_Reason__c</fullName>
    <description>Complaints Resolution Field</description>
    <label>Error Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RCA_department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor Servicing related</fullName>
            </value>
            <value>
                <fullName>Asking for bribe</fullName>
            </value>
            <value>
                <fullName>Backdated NAV</fullName>
            </value>
            <value>
                <fullName>Batch Run</fullName>
            </value>
            <value>
                <fullName>Branch servicing/behaviour related</fullName>
            </value>
            <value>
                <fullName>CC agent servicing/behaviour related</fullName>
            </value>
            <value>
                <fullName>Cheque pick up not done</fullName>
            </value>
            <value>
                <fullName>Client Id merger related</fullName>
            </value>
            <value>
                <fullName>Communication not sent</fullName>
            </value>
            <value>
                <fullName>Communication not sent for rejected / requirement raised / closed cases - not received by customer</fullName>
            </value>
            <value>
                <fullName>Communication not sent for rejected case / requirement raised / Resolved cases</fullName>
            </value>
            <value>
                <fullName>Communication not sent\delayed</fullName>
            </value>
            <value>
                <fullName>Complaint withdrawn</fullName>
            </value>
            <value>
                <fullName>Court order</fullName>
            </value>
            <value>
                <fullName>Customer wants refund of all the premiums paid</fullName>
            </value>
            <value>
                <fullName>Data Entry Error</fullName>
            </value>
            <value>
                <fullName>Data Entry\Data capture Error</fullName>
            </value>
            <value>
                <fullName>Delay / Case not created/Erroneous Case creation</fullName>
            </value>
            <value>
                <fullName>Delay in accounting premium\ Submitting the request</fullName>
            </value>
            <value>
                <fullName>Delay in intimating the third party payment</fullName>
            </value>
            <value>
                <fullName>Delay in processing</fullName>
            </value>
            <value>
                <fullName>Delay in Response</fullName>
            </value>
            <value>
                <fullName>Delay/Erroneous case creation</fullName>
            </value>
            <value>
                <fullName>Delay\Case not created\ Erroneous Case creation</fullName>
            </value>
            <value>
                <fullName>ECS/DDCC/SI/SD wrongly deducted\Not deducted</fullName>
            </value>
            <value>
                <fullName>Error received while paying premium</fullName>
            </value>
            <value>
                <fullName>Errorneous refund to incorrect customer</fullName>
            </value>
            <value>
                <fullName>Freelook request received post free-look period</fullName>
            </value>
            <value>
                <fullName>Hoax Call</fullName>
            </value>
            <value>
                <fullName>Holding letter on status update not sent / sent but not received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>